--- a/src/app/pages/team/team.page.html
+++ b/src/app/pages/team/team.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-select
       style="width: 100%; font-weight: bold; font-size: larger"
-      (ionChange)="changeTeam($event)"
+      (ionChange)="changeTeam()"
       value="{{teamId}}"
       required
     >
