--- a/src/app/pages/player/player.page.scss
+++ b/src/app/pages/player/player.page.scss
@@ -29,3 +29,19 @@ ion-card {
 
   background-color: #f21a3c;
 }
+
+.b-fg {
+  margin: auto;
+  font-size: smaller;
+  white-space: nowrap;
+}
+
+.p-fg {
+  margin: auto;
+  font-size: 22px;
+  white-space: nowrap;
+}
+
+ion-col {
+  margin: 0 10px;
+}
