--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,8 @@
 
 /** Ionic CSS Variables **/
 :root {
+  --ion-font-family: "Open Sans", Arial, Helvetica, Verdana, sans-serif;
+  --ion-default-font: "Open Sans", Arial, Helvetica, Verdana, sans-serif !important;
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
