--- a/src/app/pages/balance/balance.page.html
+++ b/src/app/pages/balance/balance.page.html
@@ -30,93 +30,105 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-grid>
-    <ion-row>
-      <ion-col>Valore Rosa</ion-col>
-      <ion-col>{{balance?.teamValue | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>Bilancio annuale</ion-col>
-      <ion-col>{{balance?.annualBalance | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>Bilancio totale</ion-col>
-      <ion-col>{{balance?.totalBalance | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.leagueExpense">
-      <ion-col>Soldi da versare</ion-col>
-      <ion-col>{{balance?.leagueExpense | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.paidLeagueExpense">
-      <ion-col>Soldi versati</ion-col>
-      <ion-col>{{balance?.paidLeagueExpense | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col><b>Entrate</b></ion-col>
-      <ion-col></ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.incomes?.awards">
-      <ion-col>Premi</ion-col>
-      <ion-col>{{balance?.incomes?.awards | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>Trasferimenti</ion-col>
-      <ion-col>{{balance?.incomes?.transfers | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.incomes?.refunds">
-      <ion-col>Rimborsi</ion-col>
-      <ion-col>{{balance?.incomes?.refunds | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.incomes?.firstIndemnities">
-      <ion-col>Indennità I</ion-col>
-      <ion-col>{{balance?.incomes?.firstIndemnities | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.incomes?.secundIndemnities">
-      <ion-col>Indennità II</ion-col>
-      <ion-col
-        >{{balance?.incomes?.secundIndemnities | currency:'EUR'}}</ion-col
-      >
-    </ion-row>
-    <ion-row>
-      <ion-col><b>Uscite</b></ion-col>
-      <ion-col></ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>Rinnovi</ion-col>
-      <ion-col>{{balance?.outings?.renewals | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.outings?.firstAuction">
-      <ion-col>Asta I</ion-col>
-      <ion-col>{{balance?.outings?.firstAuction | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.outings?.secondAuction">
-      <ion-col>Asta II</ion-col>
-      <ion-col>{{balance?.outings?.secondAuction | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.outings?.displacements">
-      <ion-col>Spostamenti</ion-col>
-      <ion-col>{{balance?.outings?.displacements | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.outings?.terminations">
-      <ion-col>Rescissioni</ion-col>
-      <ion-col>{{balance?.outings?.terminations | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>Trasferimenti</ion-col>
-      <ion-col>{{balance?.outings?.transfers | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.outings?.taxes">
-      <ion-col>Tasse</ion-col>
-      <ion-col>{{balance?.outings?.taxes | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.outings?.fines">
-      <ion-col>Penali</ion-col>
-      <ion-col>{{balance?.outings?.fines | currency:'EUR'}}</ion-col>
-    </ion-row>
-    <ion-row *ngIf="balance?.outings?.fantabet">
-      <ion-col>Fantaschedine</ion-col>
-      <ion-col>{{balance?.outings?.fantabet | currency:'EUR'}}</ion-col>
-    </ion-row>
-  </ion-grid>
+<ion-content class="cnt-balance" [fullscreen]="true">
+  <ion-card>
+    <ion-grid>
+      <ion-row>
+        <ion-col>Valore Rosa</ion-col>
+        <ion-col>{{balance?.teamValue | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>Bilancio annuale</ion-col>
+        <ion-col>{{balance?.annualBalance | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>Bilancio totale</ion-col>
+        <ion-col>{{balance?.totalBalance | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row *ngIf="balance?.leagueExpense">
+        <ion-col>Soldi da versare</ion-col>
+        <ion-col>{{balance?.leagueExpense | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row *ngIf="balance?.paidLeagueExpense">
+        <ion-col>Soldi versati</ion-col>
+        <ion-col>{{balance?.paidLeagueExpense | currency:'EUR'}}</ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
+  <ion-card
+    ><ion-grid>
+      <ion-row>
+        <ion-col><b>Entrate</b></ion-col>
+        <ion-col></ion-col>
+      </ion-row>
+      <ion-row *ngIf="balance?.incomes?.awards">
+        <ion-col>Premi</ion-col>
+        <ion-col>{{balance?.incomes?.awards | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>Trasferimenti</ion-col>
+        <ion-col>{{balance?.incomes?.transfers | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row *ngIf="balance?.incomes?.refunds">
+        <ion-col>Rimborsi</ion-col>
+        <ion-col>{{balance?.incomes?.refunds | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row *ngIf="balance?.incomes?.firstIndemnities">
+        <ion-col>Indennità I</ion-col>
+        <ion-col
+          >{{balance?.incomes?.firstIndemnities | currency:'EUR'}}</ion-col
+        >
+      </ion-row>
+      <ion-row *ngIf="balance?.incomes?.secundIndemnities">
+        <ion-col>Indennità II</ion-col>
+        <ion-col
+          >{{balance?.incomes?.secundIndemnities | currency:'EUR'}}</ion-col
+        >
+      </ion-row>
+    </ion-grid>
+  </ion-card>
+  <ion-card
+    ><ion-grid>
+      <ion-row>
+        <ion-col><b>Uscite</b></ion-col>
+        <ion-col></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>Rinnovi</ion-col>
+        <ion-col>{{balance?.outings?.renewals | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row *ngIf="balance?.outings?.firstAuction">
+        <ion-col>Asta I</ion-col>
+        <ion-col>{{balance?.outings?.firstAuction | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row *ngIf="balance?.outings?.secondAuction">
+        <ion-col>Asta II</ion-col>
+        <ion-col>{{balance?.outings?.secondAuction | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row *ngIf="balance?.outings?.displacements">
+        <ion-col>Spostamenti</ion-col>
+        <ion-col>{{balance?.outings?.displacements | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row *ngIf="balance?.outings?.terminations">
+        <ion-col>Rescissioni</ion-col>
+        <ion-col>{{balance?.outings?.terminations | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>Trasferimenti</ion-col>
+        <ion-col>{{balance?.outings?.transfers | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row *ngIf="balance?.outings?.taxes">
+        <ion-col>Tasse</ion-col>
+        <ion-col>{{balance?.outings?.taxes | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row *ngIf="balance?.outings?.fines">
+        <ion-col>Penali</ion-col>
+        <ion-col>{{balance?.outings?.fines | currency:'EUR'}}</ion-col>
+      </ion-row>
+      <ion-row *ngIf="balance?.outings?.fantabet">
+        <ion-col>Fantaschedine</ion-col>
+        <ion-col>{{balance?.outings?.fantabet | currency:'EUR'}}</ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
 </ion-content>
