--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="cnt-home">
   <mat-list>
     <mat-list-item *ngFor="let team of teams">
       <mat-card (click)="navigateToTeam(team.teamId)" class="cnt"
