--- a/src/app/pages/team/team.page.html
+++ b/src/app/pages/team/team.page.html
@@ -31,7 +31,7 @@
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Nome</th>
-      <td mat-cell *matCellDef="let element">{{element.name}}</td>
+      <td mat-cell *matCellDef="let element">{{element.name | formatName}}</td>
     </ng-container>
 
     <ng-container matColumnDef="team">
