--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,13 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+.mat-card,
+.mat-table,
+ion-card,
+body {
+  font-family: "Open Sans", Arial, Helvetica, Verdana, sans-serif !important;
+}
+
 th.mat-header-cell:first-of-type,
 td.mat-cell:first-of-type {
   padding-left: 12px !important;
