--- a/src/app/pages/player/player.page.scss
+++ b/src/app/pages/player/player.page.scss
@@ -32,16 +32,12 @@ ion-card {
 
 .b-fg {
   margin: auto;
-  font-size: smaller;
+  font-size: 0.9em;
   white-space: nowrap;
 }
 
 .p-fg {
   margin: auto;
-  font-size: 22px;
+  font-size: 1.6em;
   white-space: nowrap;
-}
-
-ion-col {
-  margin: 0 10px;
 }
