--- a/src/app/pages/balance/balance.page.scss
+++ b/src/app/pages/balance/balance.page.scss
@@ -1,8 +1,9 @@
 .cnt-balance {
   --background: none;
-  background-color: #f2f2f2;
+  background-color: white;
 
   ion-card {
-    background-color: white;
+    background-color: #424242;
+    color: white;
   }
 }
