--- a/src/app/pages/player/player.page.html
+++ b/src/app/pages/player/player.page.html
@@ -43,7 +43,7 @@
             <ion-row><p class="p-fg">{{player?.nationality }}</p></ion-row>
             <ion-row> <strong class="b-fg"> Nazionalità </strong></ion-row>
           </ion-col>-->
-          <ion-row>
+          <ion-row style="margin-bottom: 1em">
             <ion-col>
               <ion-row
                 ><p class="p-fg">
@@ -211,7 +211,7 @@
             </ion-col>
             <ion-col> {{stats?.team}} </ion-col>
           </ion-row>
-          <ion-row>
+          <ion-row style="margin-bottom: 1em">
             <ion-col>
               <ion-row><p class="p-fg">{{stats?.pg }}</p></ion-row>
               <ion-row> <strong class="b-fg"> Partite </strong></ion-row>
@@ -236,6 +236,8 @@
               <ion-row><p class="p-fg">{{stats?.esp}}</p></ion-row>
               <ion-row> <strong class="b-fg"> Espulsioni </strong></ion-row>
             </ion-col>
+          </ion-row>
+          <ion-row>
             <ion-col>
               <ion-row
                 ><p class="p-fg">
