--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,9 +1,8 @@
 .cnt-home {
   --background: none;
-  background-color: #f2f2f2;
-
+  background-color: #424242;
   mat-list-item {
-    margin: 20px 0;
+    margin: 1em 0;
     .cnt {
       border: 1px solid grey;
       background-color: white;
@@ -11,8 +10,8 @@
       width: 100%;
       padding: 0;
       img {
-        height: 30px;
-        margin: auto 10px;
+        height: 3em;
+        margin: auto 1em;
         border-radius: 50%;
       }
       p {
