--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -2,7 +2,7 @@
   --background: none;
   background-color: #424242;
   mat-list-item {
-    margin: 1em 0;
+    margin: 2.5em 0;
     .cnt {
       border: 1px solid grey;
       background-color: white;
@@ -11,11 +11,12 @@
       padding: 0;
       img {
         height: 3em;
-        margin: auto 1em;
+        margin: 1em;
         border-radius: 50%;
       }
       p {
         color: #000;
+        margin: auto 0;
       }
     }
   }
