--- a/src/app/pages/player/player.page.html
+++ b/src/app/pages/player/player.page.html
@@ -68,7 +68,7 @@
           </ion-row></ion-grid
         >
       </div></ion-card
-    ><ion-card
+    ><ion-card *ngIf="player?.value"
       ><ion-grid>
         <!--<ion-row>
           <ion-col>
