--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -14,5 +14,10 @@
       <ion-icon name="medkit"></ion-icon>
       <ion-label>Primavera</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="free">
+      <ion-icon name="finger-print"></ion-icon>
+      <ion-label>Svincolati</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
