--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,16 +1,24 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Seleziona squadra</ion-title>
+    <ion-title>Fantascivolizia</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="cnt-home">
   <mat-list>
-    <mat-list-item *ngFor="let team of teams">
-      <mat-card (click)="navigateToTeam(team.teamId)" class="cnt"
-        ><ion-row
-          ><img src="assets/img/{{logoMap[team.teamId-1]}}" alt="" />
-          <p>{{team?.name}}</p></ion-row
+    <mat-list-item>
+      <mat-card routerLink="/team-list" class="cnt"
+        ><ion-row>
+          <ion-icon name="football"></ion-icon>
+          <p>Rose</p></ion-row
+        ></mat-card
+      >
+    </mat-list-item>
+    <mat-list-item>
+      <mat-card routerLink="/rule-book" class="cnt">
+        <ion-row>
+          <ion-icon name="book"></ion-icon>
+          <p>Regolamento</p></ion-row
         ></mat-card
       >
     </mat-list-item>
