--- a/src/app/pages/team-list/team-list.page.scss
+++ b/src/app/pages/team-list/team-list.page.scss
@@ -9,10 +9,10 @@
       color: black;
       width: 100%;
       padding: 0;
-      ion-icon {
-        width: 2em;
-        height: 2em;
+      img {
+        height: 3em;
         margin: 1em;
+        border-radius: 50%;
       }
       p {
         color: #000;
