--- a/src/app/pages/rule-book/components/exchange-r-p/exchange-r-p.component.html
+++ b/src/app/pages/rule-book/components/exchange-r-p/exchange-r-p.component.html
@@ -10,47 +10,41 @@
 </ion-header>
 
 <ion-content>
-  <ion-card
-    ><ion-card-body>
-      <h3>Scambi Rosa-Primavera</h3>
-      <p>
-        Nel caso un presidente desideri sostituire un giocatore della primavera
-        con uno dei 25 della rosa, dovrà sostituirlo con un giocatore
-        appartenente stesso ruolo (in modo da rispettare la disposizione
-        3-8-8-6). <br />
-        Per scambiare un giocatore dalla rosa con uno della primavera bisogna
-        pagare <b>0,50€</b> (incrementando il montepremi finale).
-      </p>
-      <p>I trasferimenti rosa-primavera sono gratuiti nel caso fossero:</p>
-      <ul>
-        <li>
-          trasferimenti atti a creare uno spazio in prima squadra per un
-          giocatore appena trasferitosi o acquistato (non una giornata di
-          campionato dopo).
-        </li>
-        <li>
-          trasferimenti per giocatori a cui è avvenuto un infortunio, la cui
-          durata è certificata da Fantacalcio.it come maggiore di
-          <b>30 giorni</b> dal momento in cui si vuol effettuare lo spostamento
-          (non una giornata di campionato dopo).
-        </li>
-        <li>trasferimenti durante ogni sede d’asta prefissata.</li>
-        <li>
-          trasferimenti per partenza all’estero o in Serie B di giocatori in
-          rosa.
-        </li>
-      </ul>
-      <p>
-        Così come in sede d’asta, durante la stagione, finché nella primavera
-        c’è almeno uno spazio libero, il presidente della squadra può acquistare
-        nuovi giocatori da altri presidenti (nei periodi appositi) o dalla lista
-        degli svincolati, facendo partire un’asta tra chi ha almeno un posto
-        libero in primavera (nel caso una squadra possieda 30 giocatori, dovrà
-        rescindere il contratto di un giocatore prima di fare l’offerta [<a
-          (click)="navigate()"
-          >Vedi Mercato Libero</a
-        >]).
-      </p>
-    </ion-card-body></ion-card
-  >
+  <ion-card>
+    <h3>Scambi Rosa-Primavera</h3>
+    <p>
+      Nel caso un presidente desideri sostituire un giocatore della primavera
+      con uno dei 25 della rosa, dovrà sostituirlo con un giocatore appartenente
+      stesso ruolo (in modo da rispettare la disposizione 3-8-8-6). <br />
+      Per scambiare un giocatore dalla rosa con uno della primavera bisogna
+      pagare <b>0,50€</b> (incrementando il montepremi finale).
+    </p>
+    <p>I trasferimenti rosa-primavera sono gratuiti nel caso fossero:</p>
+    <ul>
+      <li>
+        trasferimenti atti a creare uno spazio in prima squadra per un giocatore
+        appena trasferitosi o acquistato (non una giornata di campionato dopo).
+      </li>
+      <li>
+        trasferimenti per giocatori a cui è avvenuto un infortunio, la cui
+        durata è certificata da Fantacalcio.it come maggiore di
+        <b>30 giorni</b> dal momento in cui si vuol effettuare lo spostamento
+        (non una giornata di campionato dopo).
+      </li>
+      <li>trasferimenti durante ogni sede d’asta prefissata.</li>
+      <li>
+        trasferimenti per partenza all’estero o in Serie B di giocatori in rosa.
+      </li>
+    </ul>
+    <p>
+      Così come in sede d’asta, durante la stagione, finché nella primavera c’è
+      almeno uno spazio libero, il presidente della squadra può acquistare nuovi
+      giocatori da altri presidenti (nei periodi appositi) o dalla lista degli
+      svincolati, facendo partire un’asta tra chi ha almeno un posto libero in
+      primavera (nel caso una squadra possieda 30 giocatori, dovrà rescindere il
+      contratto di un giocatore prima di fare l’offerta [<a (click)="navigate()"
+        >Vedi Mercato Libero</a
+      >]).
+    </p>
+  </ion-card>
 </ion-content>
