--- a/src/app/pages/rule-book/components/expel/expel.component.html
+++ b/src/app/pages/rule-book/components/expel/expel.component.html
@@ -10,51 +10,48 @@
 </ion-header>
 
 <ion-content>
-  <ion-card
-    ><ion-card-body>
-      <h3>Espulsioni</h3>
-      <p>
-        Per semplificare il lavoro degli admin i messaggi non inerenti oppure
-        gli errori causeranno l’espulsione dal gruppo per <b>una settimana</b>.
-      </p>
-      <p>Le varie tipologie di errore sono chiarite di seguito:</p>
-      <ul>
-        <li>
-          Se viene comunicato uno scambio rosa-primavera, un’offerta per uno
-          svincolato o una qualunque comunicazione di ordine generale
-          (votazioni, trattative, …) al di fuori degli orari previsti.
-        </li>
-        <li>
-          Se viene fatto un rilancio per un giocatore senza avere uno spazio
-          libero in primavera. In questo caso, se chi commette l’errore elimina
-          il messaggio prima che altre squadre abbiano rilanciato alla sua
-          offerta, non viene eliminato.
-        </li>
-        <li>
-          Se una squadra, nello stesso momento, ha il rilancio più alto per più
-          giocatori rispetto agli spazi liberi in primavera. Anche in questo
-          caso però se chi commette l’errore elimina il messaggio che riguarda
-          una delle offerte prima che altre squadre abbiano rilanciato, non
-          viene eliminato.
-        </li>
-        <li>
-          Se viene fatto il primo rilancio per un giocatore dopo le 14:00 di
-          mercoledì ([<a (click)="navigate()">Vedi Mercato Libero</a>]). Anche
-          in questo caso però se chi commette l’errore elimina il messaggio
-          prima che altre squadre abbiano rilanciato alla sua offerta, non viene
-          eliminato.
-        </li>
-        <li>
-          Se viene fatto un rilancio per un giocatore non svincolato. Anche in
-          questo caso però se chi commette l’errore elimina il messaggio che
-          riguarda l’offerta in questione prima che altre squadre abbiano
-          rilanciato, non viene eliminato.
-        </li>
-      </ul>
-      <p>
-        Tutti gli altri errori che non rientrano nelle tipologie precedenti non
-        causano l’espulsione settimanale dal gruppo.
-      </p>
-    </ion-card-body></ion-card
-  >
+  <ion-card>
+    <h3>Espulsioni</h3>
+    <p>
+      Per semplificare il lavoro degli admin i messaggi non inerenti oppure gli
+      errori causeranno l’espulsione dal gruppo per <b>una settimana</b>.
+    </p>
+    <p>Le varie tipologie di errore sono chiarite di seguito:</p>
+    <ul>
+      <li>
+        Se viene comunicato uno scambio rosa-primavera, un’offerta per uno
+        svincolato o una qualunque comunicazione di ordine generale (votazioni,
+        trattative, …) al di fuori degli orari previsti.
+      </li>
+      <li>
+        Se viene fatto un rilancio per un giocatore senza avere uno spazio
+        libero in primavera. In questo caso, se chi commette l’errore elimina il
+        messaggio prima che altre squadre abbiano rilanciato alla sua offerta,
+        non viene eliminato.
+      </li>
+      <li>
+        Se una squadra, nello stesso momento, ha il rilancio più alto per più
+        giocatori rispetto agli spazi liberi in primavera. Anche in questo caso
+        però se chi commette l’errore elimina il messaggio che riguarda una
+        delle offerte prima che altre squadre abbiano rilanciato, non viene
+        eliminato.
+      </li>
+      <li>
+        Se viene fatto il primo rilancio per un giocatore dopo le 14:00 di
+        mercoledì ([<a (click)="navigate()">Vedi Mercato Libero</a>]). Anche in
+        questo caso però se chi commette l’errore elimina il messaggio prima che
+        altre squadre abbiano rilanciato alla sua offerta, non viene eliminato.
+      </li>
+      <li>
+        Se viene fatto un rilancio per un giocatore non svincolato. Anche in
+        questo caso però se chi commette l’errore elimina il messaggio che
+        riguarda l’offerta in questione prima che altre squadre abbiano
+        rilanciato, non viene eliminato.
+      </li>
+    </ul>
+    <p>
+      Tutti gli altri errori che non rientrano nelle tipologie precedenti non
+      causano l’espulsione settimanale dal gruppo.
+    </p>
+  </ion-card>
 </ion-content>
