--- a/src/app/pages/rule-book/components/intro/intro.component.html
+++ b/src/app/pages/rule-book/components/intro/intro.component.html
@@ -10,38 +10,36 @@
 </ion-header>
 
 <ion-content>
-  <ion-card
-    ><ion-card-body>
-      <h3>Composizione</h3>
-      <p>
-        Le squadre devono essere composte da un minimo di <b>25</b> giocatori
-        fino ad un massimo di <b>30</b>.
-        <br />
-        Ogni squadra deve sia avere almeno 25 giocatori da schierare sia
-        possederne almeno 25 a titolo definitivo.
-      </p>
-      <p>
-        Tra i giocatori da schierare, risultano anche quelli presi in prestito,
-        mentre tra i giocatori posseduti a titolo definitivo sono presenti anche
-        quelli dati in prestito ad altre squadre.
-      </p>
-      <p>
-        I 25 giocatori presenti sul sito della Fantacalcio.it saranno così
-        distribuiti (ruoli secondo <b>Fantacalcio.it</b>):
-      </p>
+  <ion-card>
+    <h3>Composizione</h3>
+    <p>
+      Le squadre devono essere composte da un minimo di <b>25</b> giocatori fino
+      ad un massimo di <b>30</b>.
+      <br />
+      Ogni squadra deve sia avere almeno 25 giocatori da schierare sia
+      possederne almeno 25 a titolo definitivo.
+    </p>
+    <p>
+      Tra i giocatori da schierare, risultano anche quelli presi in prestito,
+      mentre tra i giocatori posseduti a titolo definitivo sono presenti anche
+      quelli dati in prestito ad altre squadre.
+    </p>
+    <p>
+      I 25 giocatori presenti sul sito della Fantacalcio.it saranno così
+      distribuiti (ruoli secondo <b>Fantacalcio.it</b>):
+    </p>
 
-      <ul>
-        <li><b>3 portieri</b></li>
-        <li><b>8 difensori</b></li>
-        <li><b>8 centrocampisti</b></li>
-        <li><b>6 attaccanti</b></li>
-      </ul>
-      <p>
-        I restanti 5 spazi (costituenti la “<b>primavera</b>”) sono utilizzabili
-        a piacere per quanto riguarda il ruolo. <br />
-        Ogni presidente deve possedere almeno 25 giocatori durante il corso
-        della stagione (compresi i giocatori ceduti in prestito).
-      </p>
-    </ion-card-body></ion-card
-  >
+    <ul>
+      <li><b>3 portieri</b></li>
+      <li><b>8 difensori</b></li>
+      <li><b>8 centrocampisti</b></li>
+      <li><b>6 attaccanti</b></li>
+    </ul>
+    <p>
+      I restanti 5 spazi (costituenti la “<b>primavera</b>”) sono utilizzabili a
+      piacere per quanto riguarda il ruolo. <br />
+      Ogni presidente deve possedere almeno 25 giocatori durante il corso della
+      stagione (compresi i giocatori ceduti in prestito).
+    </p>
+  </ion-card>
 </ion-content>
