--- a/src/app/pages/rule-book/components/vote/vote.component.html
+++ b/src/app/pages/rule-book/components/vote/vote.component.html
@@ -10,20 +10,18 @@
 </ion-header>
 
 <ion-content>
-  <ion-card
-    ><ion-card-body>
-      <h3>Votazioni</h3>
-      <p>
-        Qualora venga indette una votazione, ogni presidente avrà la possibilità
-        di votare nella finestra temporale stabilita e secondo le regole della
-        specifica votazione.
-      </p>
-      <p>
-        Il voto potrà essere modificato se e solo se tale modifica avviene nei
-        <b>15 minuti successivi la votazione</b>. <br />Il presidente avrà in
-        questo caso la possibilità di eliminare il messaggio precedente sulla
-        chat dell’app di messaggistica WhatsApp.
-      </p>
-    </ion-card-body></ion-card
-  >
+  <ion-card>
+    <h3>Votazioni</h3>
+    <p>
+      Qualora venga indette una votazione, ogni presidente avrà la possibilità
+      di votare nella finestra temporale stabilita e secondo le regole della
+      specifica votazione.
+    </p>
+    <p>
+      Il voto potrà essere modificato se e solo se tale modifica avviene nei
+      <b>15 minuti successivi la votazione</b>. <br />Il presidente avrà in
+      questo caso la possibilità di eliminare il messaggio precedente sulla chat
+      dell’app di messaggistica WhatsApp.
+    </p>
+  </ion-card>
 </ion-content>
