--- a/src/app/pages/rule-book/components/middle-auction/middle-auction.component.html
+++ b/src/app/pages/rule-book/components/middle-auction/middle-auction.component.html
@@ -10,19 +10,17 @@
 </ion-header>
 
 <ion-content>
-  <ion-card
-    ><ion-card-body>
-      <h3>Asta intermedia</h3>
-      <p>
-        L’asta intermedia deve essere fatta dopo la fine del mercato di gennaio
-        reale, ma prima della giornata seguente di Serie A con le stesse
-        condizioni dell’asta precampionato.
-      </p>
-      <p>
-        I giocatori arrivati (tesserati) in Serie A dopo il primo gennaio o dopo
-        il primo di luglio non possono essere acquistati come svincolati prima
-        dell’asta collettiva successiva.
-      </p>
-    </ion-card-body></ion-card
-  >
+  <ion-card>
+    <h3>Asta intermedia</h3>
+    <p>
+      L’asta intermedia deve essere fatta dopo la fine del mercato di gennaio
+      reale, ma prima della giornata seguente di Serie A con le stesse
+      condizioni dell’asta precampionato.
+    </p>
+    <p>
+      I giocatori arrivati (tesserati) in Serie A dopo il primo gennaio o dopo
+      il primo di luglio non possono essere acquistati come svincolati prima
+      dell’asta collettiva successiva.
+    </p>
+  </ion-card>
 </ion-content>
