--- a/src/app/pages/rule-book/rule-book.page.html
+++ b/src/app/pages/rule-book/rule-book.page.html
@@ -8,6 +8,7 @@
 
     <ion-content>
       <div *ngFor="let p of pages">
+        <!--
         <ion-menu-toggle *ngIf="p.url">
           <ion-item
             [routerLink]="p.url"
@@ -17,7 +18,7 @@
             <ion-icon [name]="p.icon" slot="start"></ion-icon>
             <ion-label>{{p.title}}</ion-label></ion-item
           >
-        </ion-menu-toggle>
+        </ion-menu-toggle>-->
         <ion-item
           button
           *ngIf="p.children?.length > 0"
