--- a/src/app/pages/rule-book/components/auctions-property/property-players/property-players.component.html
+++ b/src/app/pages/rule-book/components/auctions-property/property-players/property-players.component.html
@@ -44,7 +44,7 @@
       potenzialmente durante la stagione. Affinché venga rispettato il limite di
       25 giocatori di proprietà, la squadra che ne ha perso la proprietà avrà
       l’obbligo di comprare un giocatore dalla lista svincolati non oltre la
-      successiva giornata di serie A (questo ovviamente solo se il fatto di
+      successiva giornata di Serie A (questo ovviamente solo se il fatto di
       perderne la proprietà ha portato la squadra a possederne solo 24).
     </p>
     <p>
