--- a/src/app/pages/rule-book/components/transfers/clause/clause.component.html
+++ b/src/app/pages/rule-book/components/transfers/clause/clause.component.html
@@ -71,7 +71,7 @@
     <p>
       È possibile annullare una trattativa o una parte di essa durante le
       finestre di mercato se i due fantallenatori coinvolti trovano un accordo e
-      se non sono state giocate giornate di serie A tra l’ufficializzazione
+      se non sono state giocate giornate di Serie A tra l’ufficializzazione
       della trattativa e l’annullamento.
     </p>
     <p>
