--- a/src/app/pages/rule-book/rule-book.page.html
+++ b/src/app/pages/rule-book/rule-book.page.html
@@ -30,6 +30,19 @@
           <ion-icon slot="end" name="arrow-down" *ngIf="p.open"></ion-icon>
           <ion-label>{{p.title}}</ion-label>
         </ion-item>
+        <ion-menu-toggle>
+          <ion-item
+            button
+            *ngIf="!(p.children?.length > 0)"
+            [routerLink]="p.url"
+            routerDirection="root"
+            routerLinkActive="active"
+            detail="false"
+            [class.active-parent]="p.open"
+          >
+            <ion-label>{{p.title}}</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
         <ion-list *ngIf="p.open">
           <ion-menu-toggle>
             <ion-item
